# docker-intro

./: README.md
Data_Set_Credit_Score/: .dockerignore  Dockerfile  README.md  api.py  model.py  pyproject.toml  serve-api.sh
Data_Set_Credit_Score/dataset/: P1G1_Kenneth Vincentius.csv
Data_Set_Credit_Score/models/: model_knn.pkl  scaler.pkl
Data_Set_Credit_Score/notebook/: P1G1_Kenneth Vincentius.ipynb  datainf_P1G2_Kenneth Vincentius.ipynb
railway-flask/: .dockerignore  Dockerfile  main.py  railway.json  requirements.txt  start.sh
rust-multistage/: Cargo.toml  Dockerfile  README.md
rust-multistage/src/: main.rs
